Add site update

--- a/index.html
+++ b/index.html
@@ -228,38 +228,47 @@
 <h1 id="projects">Projects</h1>
 <h2 id="content-extraction-from-video">Content Extraction from Video</h2>
 <ul>
-<li><a href="https://github.com/javierip/flash-video-summarization">Flash Video Summarization: A faster than realtime video summarization algorithm</a></li>
-<li><a href="https://github.com/BHI-Research/ost">Open Summarization Toolbox</a></li>
-<li><a href="https://github.com/BHI-Research/ost-python">Open Summarization Toolbox for Python</a></li>
-</ul>
-<h2 id="high-perfomance-computing-and-education">High Perfomance Computing and Education</h2>
-<ul>
-<li><a href="https://github.com/javierip/parallel-processing-teaching-toolkit">Parallel Processing Teaching Toolkit</a></li>
-<li><a href="https://github.com/BHI-Research/Edu-PSO">Particle Swarm Optimization (PSO) as an Educational Tool for Parallel Processing</a></li>
+<li>Flash Video Summarization: A faster than real-time video summarization algorithm. <a href="https://github.com/javierip/flash-video-summarization">Source</a></li>
+<li>Open Summarization Toolbox (Python implementation). <a href="https://github.com/BHI-Research/ost-python">Source</a></li>
+<li>Open Summarization Toolbox (C++ implementation). <a href="https://github.com/BHI-Research/ost">Source</a></li>
 </ul>
 <h2 id="agroinformatics">Agroinformatics</h2>
 <ul>
 <li><a href="http://pronostico-malezas.frbb.utn.edu.ar/">Real-time weed emergence prediction based on Artificial Neural Networks (in Spanish)</a></li>
 </ul>
+<h2 id="high-perfomance-computing-and-education">High Perfomance Computing and Education</h2>
+<ul>
+<li>Particle Swarm Optimization (PSO) as an Educational Tool for Parallel Processing. See <a href="https://bhi-research.github.io/Edu-PSO-DEMO/">Demo</a> and <a href="https://github.com/BHI-Research/Edu-PSO">Source</a>.</li>
+<li>Parallel Processing Teaching Toolkit. <a href="https://github.com/javierip/parallel-processing-teaching-toolkit">Source</a></li>
+</ul>
 <h2 id="people">People</h2>
 <h3 id="faculty">Faculty</h3>
 <ul>
-<li>Iparraguirre, Javier</li>
+<li><a href="https://github.com/javierip">Iparraguirre, Javier</a></li>
 <li>Blanco, Anibal</li>
 </ul>
 <h3 id="researchers">Researchers</h3>
 <ul>
 <li>Aggio, Santiago</li>
-<li>Balmaceda, Leandro Miguel</li>
-<li>Diaz, Ariel Iván</li>
+<li><a href="https://github.com/leanbalma">Balmaceda, Leandro Miguel</a></li>
+<li><a href="https://github.com/arielivandiaz">Diaz, Ariel Iván</a></li>
 <li>García, Nahuel</li>
-<li>Rostagno, Adrián</li>
+<li><a href="https://github.com/arostag">Rostagno, Adrián</a></li>
 </ul>
-<h2 id="publications">Publications</h2>
-<p>Selected peer reviewed publications:</p>
+<h2 id="latest-publications">Latest Publications</h2>
 <ul>
-<li>L. Damiani, A. I. Diaz, J. Iparraguirre, A. M. Blanco. <strong>Accelerated particle swarm optimization with explicit consideration of model constraints</strong>. Cluster Computing, Springer, 2019. <a href="https://link.springer.com/article/10.1007/s10586-019-02933-1">Link</a>.</li>
-<li>J. Iparraguirre, L. Balmaceda, C. Mariani. <strong>Speeded-up robust features (SURF) as a benchmark for heterogeneous computers</strong>. 2014 IEEE Biennial Congress of Argentina (ARGENCON).IEEE, 2014. <a href="https://ieeexplore.ieee.org/abstract/document/6868545">Link</a>.</li>
+<li>
+<p>L. Balmaceda, A. I. Diaz, A. Rostagno, S. L. Aggio, A. M. Blanco, J. Iparraguirre. <strong>An Open Source Quantitative Evaluation Framework for Automatic Video Summarization Algorithms</strong>. 48 Jornadas Argentinas de Informática (48 JAIIO), Salta, Argentina, September 2019. (Available soon).</p>
+</li>
+<li>
+<p>A. I. Diaz, L. Balmaceda, A. Rostagno, S. L. Aggio, J. P. Renzi, M. R. Vigna, G. R. Chantre, A. M. Blanco, J. Iparraguirre. <strong>Sistema on-line de predicción de emergencia de malezas</strong>. 48 Jornadas Argentinas de Informática (48 JAIIO), Salta, Argentina, September 2019. (Available soon).</p>
+</li>
+<li>
+<p>L. N. Salmieri, J. Iparraguirre, M. Frutos, A. M. Blanco. <strong>Optimización PSO paralelizada para scheduling de flow-shop</strong>. 48 Jornadas Argentinas de Informática (48 JAIIO), Salta, Argentina, September 2019. (Available soon).</p>
+</li>
+<li>
+<p>L. Damiani, A. I. Diaz, J. Iparraguirre, A. M. Blanco. <strong>Accelerated particle swarm optimization with explicit consideration of model constraints</strong>. Cluster Computing, Springer, 2019. <a href="https://link.springer.com/article/10.1007/s10586-019-02933-1">Link</a>.</p>
+</li>
 </ul>
 <p>A complete publications list is available at <a href="https://scholar.google.com.ar/citations?user=PNNFrAQAAAAJ&amp;hl=en">Google Scholar</a>.</p>
 <h2 id="contact">Contact</h2>
